--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a href="" title="Entenda como funciona" class="cta__link-white">Entenda como funciona</a>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-6 align-center">
             <img src="images/banner-interativo.png" class="img-responsive">
           </div>
         </div>
@@ -429,7 +429,7 @@
         <h2 class="section__title text-center">Qual o melhor para o seu pet?</h2>
         <table>
           <tr>
-            <th>Comparativo</th>
+            <th class="sticky-element bg-white">Comparativo</th>
             <th class="item-destaque">
               <svg width="56" height="42" viewBox="0 0 56 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M23.0101 39.7206C22.6713 39.7226 22.3396 39.6234 22.0576 39.4357C14.0927 34.2052 4.09948 26.9463 1.73087 22.0645C-0.0667685 18.3941 -0.343366 14.1626 0.961178 10.2895C1.58908 8.38419 2.59365 6.62462 3.91517 5.11535C5.2367 3.60608 6.84819 2.37793 8.65385 1.50391C11.5796 0.0953923 14.8796 -0.338791 18.07 0.265019C21.2605 0.868828 24.1736 2.47887 26.3823 4.85909C26.6981 5.19405 26.8679 5.64074 26.8543 6.10089C26.8408 6.56105 26.645 6.99696 26.31 7.31275C25.975 7.62854 25.5283 7.79833 25.0682 7.78478C24.608 7.77122 24.1721 7.57542 23.8563 7.24046C22.153 5.39992 19.9049 4.15337 17.4415 3.6835C14.9781 3.21363 12.429 3.54515 10.1677 4.62946C8.77872 5.30329 7.53933 6.24944 6.52319 7.41168C5.50705 8.57393 4.73488 9.92856 4.25257 11.3951C3.24321 14.4034 3.46017 17.6884 4.85642 20.5379C6.40856 23.7399 13.3613 29.57 23.9626 36.5228C24.2747 36.7278 24.5123 37.028 24.6402 37.3788C24.768 37.7296 24.7793 38.1123 24.6723 38.47C24.5653 38.8277 24.3458 39.1414 24.0463 39.3644C23.7469 39.5874 23.3835 39.7079 23.0101 39.7079V39.7206Z" fill="white"/>
